# ftl

./: .gitattributes  .gitignore  .go-arch-lint.yml  .golangci.yml  .goosehints  .goreleaser.yaml  .npmrc  .taplo.toml  404.html  BUILD  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.runner-jvm  Justfile  MODULE.bazel  README.md  WORKSPACE  atom.xml  bazel-bin  bazel-ftl  bazel-out  bazel-testlogs  docker-compose.yml  ftl-project.toml  ftl-provisioner-config.toml  go.mod  go.sum  index.html  lefthook.yml  main.css  pnpm-lock.yaml  pnpm-workspace.yaml  raft-runbook.md  search-index.json  search_index.en.js  sitemap.xml  sqlc.yaml  version.go
backend/admin/: BUILD.bazel  admin_test.go  client.go  environment.go  integration_test.go  local_client.go  local_client_test.go  service.go
backend/console/: BUILD.bazel  console.go  console_integration_test.go  console_test.go
backend/controller/: BUILD.bazel  controller.go  deployment_logs.go  schemaservice.go
backend/cron/: BUILD.bazel  go2proto.to.go  integration_test.go  service.go  service_test.go  state.go
backend/goose/: BUILD.bazel  goose.go
backend/ingress/: BUILD.bazel  handler.go  handler_test.go  ingress.go  ingress_integration_test.go  ingress_test.go  observability.go  openapi.go  openapi_test.go  request.go  request_test.go  response.go  service.go  view.go  view_test.go
backend/lease/: BUILD.bazel  service.go  service_test.go
backend/provisioner/: BUILD.bazel  controller_provisioner.go  deployment.go  deployment_test.go  dev_provisioner.go  egress_provisioner.go  fixture_provisioner.go  inmem_provisioner.go  noop_provisioner.go  oci_image_provisioner.go  plugin.go  provisioner_integration_test.go  registry.go  resource_equality_test.go  resource_graph.go  resource_graph_test.go  resource_type.go  runner_scaling_provisioner.go  service.go  sql_migration_provisioner.go
backend/runner/: BUILD.bazel  runner.go
backend/schemaservice/: BUILD.bazel  changesets.go  changesetstate_test.go  controllerstate_test.go  eventextractor.go  eventextractor_test.go  events.go  schemaservice.go  state.go  state_test.go
backend/timeline/: BUILD.bazel  filters.go  filters_test.go  integration_test.go  service.go  service_test.go
cmd/ftl/: BUILD.bazel  app.go  cmd_await_summary.go  cmd_bench.go  cmd_build.go  cmd_buildimage.go  cmd_call.go  cmd_changeset.go  cmd_changeset_describe.go  cmd_changeset_list.go  cmd_changeset_rollback.go  cmd_config.go  cmd_config_migrate.go  cmd_deploy.go  cmd_dev.go  cmd_download.go  cmd_dump_help.go  cmd_edit.go  cmd_goose.go  cmd_image.go  cmd_image_build.go  cmd_image_deploy.go  cmd_image_inspect.go  cmd_init.go  cmd_interactive.go  cmd_kill.go  cmd_logs.go  cmd_logs_set_level.go  cmd_lsp.go  cmd_mcp.go  cmd_mcp_test.go  cmd_module.go  cmd_module_new.go  cmd_mysql.go  cmd_new.go  cmd_new_migration.go  cmd_open.go  cmd_ping.go  cmd_postgres.go  cmd_profile.go  (+27 more)
cmd/ftl-admin/: BUILD.bazel  main.go
cmd/ftl-console/: BUILD.bazel  main.go
cmd/ftl-controller/: BUILD.bazel  main.go
cmd/ftl-cron/: BUILD.bazel  main.go
cmd/ftl-gen-lsp/: BUILD.bazel  main.go
cmd/ftl-http-ingress/: BUILD.bazel  main.go
cmd/ftl-lease/: BUILD.bazel  main.go
cmd/ftl-provisioner/: BUILD.bazel  main.go
cmd/ftl-provisioner-cloudformation/: BUILD.bazel  cf_executor.go  cloudformation_util.go  kinds.go  msk.go  mysql.go  plan.go  postgres.go  provisioner.go  status.go  task.go
cmd/ftl-provisioner-sandbox/: BUILD.bazel  README.md  provisioner.go  status.go  task.go
cmd/ftl-proxy-pg/: BUILD.bazel  main.go
cmd/ftl-runner/: BUILD.bazel  main.go
cmd/ftl-schema/: BUILD.bazel  main.go
cmd/ftl-sqlc/: BUILD.bazel  go.mod  main.go
cmd/ftl-timeline/: BUILD.bazel  main.go
internal/: BUILD.bazel  scaffold.go  zip.go  zip_relative.go  zip_relative_test.go
internal/app/: app.go  cmd_bench.go  cmd_build.go  cmd_call.go  cmd_changeset.go  cmd_changeset_list.go  cmd_changeset_rollback.go  cmd_config.go  cmd_deploy.go  cmd_dev.go  cmd_download.go  cmd_edit.go  cmd_goose.go  cmd_init.go  cmd_interactive.go  cmd_kill.go  cmd_logs.go  cmd_logs_set_level.go  cmd_lsp.go  cmd_mcp.go  cmd_mcp_test.go  cmd_module.go  cmd_module_new.go  cmd_mysql.go  cmd_ping.go  cmd_postgres.go  cmd_profile.go  cmd_ps.go  cmd_pubsub.go  cmd_realm.go  cmd_replay.go  cmd_schema.go  cmd_schema_diff.go  cmd_schema_ebnf.go  cmd_schema_example.go  cmd_schema_generate.go  cmd_schema_get.go  cmd_secret.go  cmd_serve.go  cmd_sql_migration_new.go  (+6 more)
internal/artefacts/: local_deployments.go  oci_registry.go
internal/authn/: BUILD.bazel  authn.go
internal/bind/: BUILD.bazel  bind_allocator.go
internal/buildengine/: BUILD.bazel  build.go  deploy.go  deps.go  engine.go  engine_integration_test.go  engine_old.go  engine_test.go  engine_v2.go  events.go  jvm_build_devel.go  jvm_build_release.go  module.go  sql_migration_extract.go  sql_migration_extract_test.go  stubs.go  terminal.go  topological.go  updates.go
internal/channels/: BUILD.bazel  broadcast.go  broadcast_test.go  itercontext_test.go  map.go  notifier_test.go  notify.go  subscribe.go  take.go  window.go
internal/clirpc/: BUILD.bazel  clirpc.go
internal/concurrency/: BUILD.bazel  resgroup.go  resgroup_test.go
internal/config/: 1password.go  1password_test.go  BUILD.bazel  api.go  asm.go  asm_integration_test.go  asm_test.go  cache.go  config_test.go  envars.go  file.go  file_test.go  global.go  key.go  key_test.go  memory.go  memory_test.go  profile.go  registry.go  remote.go
internal/configuration/: BUILD.bazel  api.go
internal/container/: BUILD.bazel  container.go
internal/cors/: BUILD.bazel
internal/cron/: pattern.go
internal/deploymentcontext/: BUILD.bazel  admin_provider.go  database.go  deployment_context.go  disk_provider.go  disk_provider_test.go  from_proto.go  from_secrets.go  from_secrets_test.go  kube_deployment_context_integration_test.go  kube_provider.go  module_context.go  module_context_test.go  provider.go  template_routing.go  to_proto.go
internal/dev/: BUILD.bazel  db.go  devendpoint.go  docker-compose.grafana.yml  grafana.go  (+6 more)
(+2563 files in other folders)
