bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.51.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_buf", version = "0.3.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_connectrpc_grpcreflect",
    "com_connectrpc_otelconnect",
    "com_github_akamensky_base58",
    "com_github_alecthomas_assert_v2",
    "com_github_alecthomas_atomic",
    "com_github_alecthomas_chroma_v2",
    "com_github_alecthomas_concurrency",
    "com_github_alecthomas_errors",
    "com_github_alecthomas_kong",
    "com_github_alecthomas_kong_toml",
    "com_github_alecthomas_participle_v2",
    "com_github_alecthomas_repr",
    "com_github_alecthomas_types",
    "com_github_amacneil_dbmate_v2",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_feature_rds_auth",
    "com_github_aws_aws_sdk_go_v2_service_cloudformation",
    "com_github_aws_aws_sdk_go_v2_service_ecr",
    "com_github_aws_aws_sdk_go_v2_service_secretsmanager",
    "com_github_aws_smithy_go",
    "com_github_awslabs_goformation_v7",
    "com_github_beevik_etree",
    "com_github_benbjohnson_clock",
    "com_github_block_ftl_golang_tools",
    "com_github_block_ftl_mysql_auth_proxy",
    "com_github_block_scaffolder",
    "com_github_bmatcuk_doublestar_v4",
    "com_github_burntsushi_toml",
    "com_github_chzyer_readline",
    "com_github_deckarep_golang_set_v2",
    "com_github_docker_docker",
    "com_github_docker_go_connections",
    "com_github_go_logr_logr",
    "com_github_go_openapi_spec",
    "com_github_go_sql_driver_mysql",
    "com_github_go_viper_mapstructure_v2",
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "com_github_google_uuid",
    "com_github_hashicorp_cronexpr",
    "com_github_hexops_gotextdiff",
    "com_github_ibm_sarama",
    "com_github_jackc_pgx_v5",
    "com_github_jellydator_ttlcache_v3",
    "com_github_jotaen_kong_completion",
    "com_github_jpillora_backoff",
    "com_github_kballard_go_shellquote",
    "com_github_lni_dragonboat_v4",
    "com_github_mark3labs_mcp_go",
    "com_github_mattn_go_isatty",
    "com_github_multiformats_go_base36",
    "com_github_opencontainers_go_digest",
    "com_github_opencontainers_image_spec",
    "com_github_otiai10_copy",
    "com_github_posener_complete",
    "com_github_puzpuzpuz_xsync_v3",
    "com_github_radovskyb_watcher",
    "com_github_rs_cors",
    "com_github_santhosh_tekuri_jsonschema_v5",
    "com_github_sergi_go_diff",
    "com_github_swaggest_jsonschema_go",
    "com_github_tidwall_pretty",
    "com_github_titanous_json5",
    "com_github_tliron_commonlog",
    "com_github_tliron_glsp",
    "com_github_tliron_kutil",
    "com_github_xsam_otelsql",
    "com_github_zalando_go_keyring",
    "io_istio_api",
    "io_istio_client_go",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_yaml",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "land_oras_oras_go_v2",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_mod",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_golang_x_text",
    "org_golang_x_tools",
    "org_modernc_sqlite",
    "org_uber_go_automaxprocs",
    "tools_gotest_v3",
)
