load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "admin",
    srcs = [
        "client.go",
        "environment.go",
        "local_client.go",
        "service.go",
    ],
    importpath = "github.com/block/ftl/backend/admin",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/controller/artefacts",
        "//backend/controller/state",
        "//backend/protos/xyz/block/ftl/admin/v1:admin",
        "//backend/protos/xyz/block/ftl/admin/v1/adminpbconnect",
        "//backend/protos/xyz/block/ftl/pubsub/v1/pubsubpbconnect",
        "//backend/protos/xyz/block/ftl/timeline/v1:timeline",
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//common/encoding",
        "//common/schema",
        "//common/sha256",
        "//common/slices",
        "//internal/channels",
        "//internal/configuration",
        "//internal/configuration/manager",
        "//internal/key",
        "//internal/log",
        "//internal/projectconfig",
        "//internal/routing",
        "//internal/rpc",
        "//internal/rpc/headers",
        "//internal/schema/schemaeventsource",
        "//internal/timelineclient",
        "//internal/watch",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_types//either",
        "@com_github_alecthomas_types//optional",
        "@com_github_ibm_sarama//:sarama",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "admin_test",
    srcs = [
        "admin_test.go",
        "client_test.go",
    ],
    embed = [":admin"],
    deps = [
        "//backend/protos/xyz/block/ftl/admin/v1:admin",
        "//common/schema",
        "//internal/configuration",
        "//internal/configuration/manager",
        "//internal/configuration/providers",
        "//internal/configuration/routers",
        "//internal/log",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_assert_v2//:assert",
        "@com_github_alecthomas_types//optional",
    ],
)
