load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = ["controller.go"],
    importpath = "github.com/block/ftl/backend/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//:ftl",
        "//backend/controller/leases",
        "//backend/controller/observability",
        "//backend/controller/scheduledtask",
        "//backend/controller/state",
        "//backend/protos/xyz/block/ftl/admin/v1:admin",
        "//backend/protos/xyz/block/ftl/admin/v1/adminpbconnect",
        "//backend/protos/xyz/block/ftl/lease/v1/leasepbconnect",
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//common/schema",
        "//common/slices",
        "//internal/deploymentcontext",
        "//internal/eventstream",
        "//internal/key",
        "//internal/log",
        "//internal/observability",
        "//internal/routing",
        "//internal/rpc",
        "//internal/schema/schemaeventsource",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_jellydator_ttlcache_v3//:ttlcache",
        "@com_github_jpillora_backoff//:backoff",
        "@org_golang_x_exp//maps",
    ],
)
