load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ingress",
    srcs = [
        "handler.go",
        "ingress.go",
        "observability.go",
        "openapi.go",
        "request.go",
        "response.go",
        "service.go",
        "view.go",
    ],
    importpath = "github.com/block/ftl/backend/ingress",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/protos/xyz/block/ftl/v1:ftl",
        "//common/protos/xyz/block/ftl/schema/v1:schema",
        "//common/schema",
        "//common/slices",
        "//internal/channels",
        "//internal/cors",
        "//internal/http",
        "//internal/key",
        "//internal/log",
        "//internal/observability",
        "//internal/routing",
        "//internal/schema/schemaeventsource",
        "//internal/timelineclient",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_atomic//:atomic",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_types//optional",
        "@com_github_go_openapi_spec//:spec",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_metric//noop",
    ],
)

go_test(
    name = "ingress_test",
    srcs = [
        "handler_test.go",
        "ingress_test.go",
        "openapi_test.go",
        "request_test.go",
        "view_test.go",
    ],
    embed = [":ingress"],
    deps = [
        "//common/encoding",
        "//common/schema",
        "//go-runtime/ftl",
        "//internal/key",
        "//internal/log",
        "//internal/routing",
        "//internal/schema/schemaeventsource",
        "//internal/timelineclient",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_assert_v2//:assert",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_types//optional",
    ],
)
