load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "provisioner",
    srcs = [
        "deployment.go",
        "dev_provisioner.go",
        "fixture_provisioner.go",
        "inmem_provisioner.go",
        "noop_provisioner.go",
        "plugin.go",
        "registry.go",
        "runner_scaling_provisioner.go",
        "service.go",
        "sql_migration_provisioner.go",
    ],
    importpath = "github.com/block/ftl/backend/provisioner",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/controller/artefacts",
        "//backend/protos/xyz/block/ftl/provisioner/v1beta1",
        "//backend/protos/xyz/block/ftl/provisioner/v1beta1/provisionerpbconnect",
        "//backend/protos/xyz/block/ftl/v1:ftl",
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//backend/provisioner/scaling",
        "//common/plugin",
        "//common/protos/xyz/block/ftl/schema/v1:schema",
        "//common/reflect",
        "//common/schema",
        "//common/sha256",
        "//common/slices",
        "//common/strcase",
        "//internal/channels",
        "//internal/dev",
        "//internal/dsn",
        "//internal/key",
        "//internal/log",
        "//internal/provisioner/executor",
        "//internal/provisioner/state",
        "//internal/rpc",
        "//internal/schema/schemaeventsource",
        "//internal/timelineclient",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_atomic//:atomic",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_kong//:kong",
        "@com_github_alecthomas_types//optional",
        "@com_github_amacneil_dbmate_v2//pkg/dbmate",
        "@com_github_amacneil_dbmate_v2//pkg/driver/mysql",
        "@com_github_amacneil_dbmate_v2//pkg/driver/postgres",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_jackc_pgx_v5//stdlib",
        "@com_github_jpillora_backoff//:backoff",
        "@com_github_puzpuzpuz_xsync_v3//:xsync",
        "@com_github_xsam_otelsql//:otelsql",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "provisioner_test",
    srcs = ["deployment_test.go"],
    deps = [
        ":provisioner",
        "//backend/protos/xyz/block/ftl/provisioner/v1beta1",
        "//common/schema",
        "//internal/key",
        "//internal/log",
        "@com_github_alecthomas_assert_v2//:assert",
    ],
)