load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/block/ftl/backend/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/controller/artefacts",
        "//backend/protos/xyz/block/ftl/hotreload/v1:hotreload",
        "//backend/protos/xyz/block/ftl/hotreload/v1/hotreloadpbconnect",
        "//backend/protos/xyz/block/ftl/lease/v1/leasepbconnect",
        "//backend/protos/xyz/block/ftl/pubsub/v1/pubsubpbconnect",
        "//backend/protos/xyz/block/ftl/query/v1/querypbconnect",
        "//backend/protos/xyz/block/ftl/v1:ftl",
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//backend/runner/observability",
        "//backend/runner/proxy",
        "//backend/runner/pubsub",
        "//backend/runner/query",
        "//common/plugin",
        "//common/schema",
        "//common/slices",
        "//internal/download",
        "//internal/dsn",
        "//internal/exec",
        "//internal/key",
        "//internal/log",
        "//internal/observability",
        "//internal/pgproxy",
        "//internal/rpc",
        "//internal/timelineclient",
        "//internal/unstoppable",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_atomic//:atomic",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_types//optional",
        "@com_github_block_ftl_mysql_auth_proxy//:ftl-mysql-auth-proxy",
        "@com_github_jpillora_backoff//:backoff",
        "@com_github_otiai10_copy//:copy",
        "@com_github_puzpuzpuz_xsync_v3//:xsync",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_x_sync//errgroup",
    ],
)
