load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "schemaservice",
    srcs = [
        "changesets.go",
        "eventextractor.go",
        "events.go",
        "schemaservice.go",
        "state.go",
    ],
    importpath = "github.com/block/ftl/backend/schemaservice",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//common/reflect",
        "//common/schema",
        "//common/slices",
        "//internal/channels",
        "//internal/iterops",
        "//internal/key",
        "//internal/log",
        "//internal/raft",
        "//internal/rpc",
        "//internal/statemachine",
        "//internal/timelineclient",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_types//optional",
        "@com_github_alecthomas_types//tuple",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_exp//maps",
    ],
)

go_test(
    name = "schemaservice_test",
    srcs = [
        "changesetstate_test.go",
        "eventextractor_test.go",
        "state_test.go",
    ],
    embed = [":schemaservice"],
    deps = [
        "//common/reflect",
        "//common/schema",
        "//internal/key",
        "//internal/log",
        "@com_github_alecthomas_assert_v2//:assert",
        "@com_github_alecthomas_types//tuple",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
