load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-admin_lib",
    srcs = ["main.go"],
    importpath = "github.com/block/ftl/cmd/ftl-admin",
    visibility = ["//visibility:private"],
    deps = [
        "//:ftl",
        "//backend/admin",
        "//backend/controller/artefacts",
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//internal/configuration",
        "//internal/configuration/manager",
        "//internal/configuration/providers",
        "//internal/configuration/routers",
        "//internal/log",
        "//internal/observability",
        "//internal/prodinit",
        "//internal/routing",
        "//internal/rpc",
        "//internal/schema/schemaeventsource",
        "//internal/timelineclient",
        "@com_github_alecthomas_kong//:kong",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_secretsmanager//:secretsmanager",
    ],
)

go_binary(
    name = "ftl-admin",
    embed = [":ftl-admin_lib"],
    visibility = ["//visibility:public"],
)
