load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-gen-lsp_lib",
    srcs = ["main.go"],
    importpath = "github.com/block/ftl/cmd/ftl-gen-lsp",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_kong//:kong",
        "@com_github_tliron_kutil//terminal",
    ],
)

go_binary(
    name = "ftl-gen-lsp",
    embed = [":ftl-gen-lsp_lib"],
    visibility = ["//visibility:public"],
)
