load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-http-ingress_lib",
    srcs = ["main.go"],
    importpath = "github.com/block/ftl/cmd/ftl-http-ingress",
    visibility = ["//visibility:private"],
    deps = [
        "//:ftl",
        "//backend/ingress",
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//internal/log",
        "//internal/observability",
        "//internal/prodinit",
        "//internal/routing",
        "//internal/rpc",
        "//internal/schema/schemaeventsource",
        "//internal/timelineclient",
        "@com_github_alecthomas_kong//:kong",
    ],
)

go_binary(
    name = "ftl-http-ingress",
    embed = [":ftl-http-ingress_lib"],
    visibility = ["//visibility:public"],
)
