load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-provisioner-cloudformation_lib",
    srcs = [
        "cf_executor.go",
        "cloudformation_util.go",
        "kinds.go",
        "mysql.go",
        "postgres.go",
        "provisioner.go",
        "status.go",
    ],
    importpath = "github.com/block/ftl/cmd/ftl-provisioner-cloudformation",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/protos/xyz/block/ftl/provisioner/v1beta1",
        "//backend/protos/xyz/block/ftl/provisioner/v1beta1/provisionerpbconnect",
        "//common/plugin",
        "//common/schema",
        "//common/slices",
        "//internal/key",
        "//internal/log",
        "//internal/provisioner",
        "//internal/provisioner/executor",
        "//internal/provisioner/state",
        "//internal/timelineclient",
        "@com_connectrpc_connect//:connect",
        "@com_github_akamensky_base58//:base58",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_types//optional",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_cloudformation//:cloudformation",
        "@com_github_aws_aws_sdk_go_v2_service_cloudformation//types",
        "@com_github_aws_aws_sdk_go_v2_service_secretsmanager//:secretsmanager",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_awslabs_goformation_v7//cloudformation",
        "@com_github_awslabs_goformation_v7//cloudformation/cloudformation",
        "@com_github_awslabs_goformation_v7//cloudformation/rds",
        "@com_github_awslabs_goformation_v7//cloudformation/tags",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_jackc_pgx_v5//stdlib",
        "@com_github_jpillora_backoff//:backoff",
        "@com_github_puzpuzpuz_xsync_v3//:xsync",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)

go_binary(
    name = "ftl-provisioner-cloudformation",
    embed = [":ftl-provisioner-cloudformation_lib"],
    visibility = ["//visibility:public"],
)
