load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-provisioner_lib",
    srcs = ["main.go"],
    importpath = "github.com/block/ftl/cmd/ftl-provisioner",
    visibility = ["//visibility:private"],
    deps = [
        "//:ftl",
        "//backend/controller/artefacts",
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//backend/provisioner",
        "//backend/provisioner/scaling/k8sscaling",
        "//common/schema",
        "//common/slices",
        "//internal/log",
        "//internal/observability",
        "//internal/prodinit",
        "//internal/rpc",
        "//internal/timelineclient",
        "@com_github_alecthomas_kong//:kong",
    ],
)

go_binary(
    name = "ftl-provisioner",
    embed = [":ftl-provisioner_lib"],
    visibility = ["//visibility:public"],
)
