load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-proxy-pg_lib",
    srcs = ["main.go"],
    importpath = "github.com/block/ftl/cmd/ftl-proxy-pg",
    visibility = ["//visibility:private"],
    deps = [
        "//:ftl",
        "//internal/log",
        "//internal/observability",
        "//internal/pgproxy",
        "@com_github_alecthomas_kong//:kong",
    ],
)

go_binary(
    name = "ftl-proxy-pg",
    embed = [":ftl-proxy-pg_lib"],
    visibility = ["//visibility:public"],
)
