load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/block/ftl/cmd/ftl-runner",
    visibility = ["//visibility:private"],
    deps = [
        "//:ftl",
        "//backend/controller/artefacts",
        "//backend/runner",
        "//internal/log",
        "//internal/observability",
        "//internal/prodinit",
        "@com_github_alecthomas_kong//:kong",
    ],
)

go_binary(
    name = "ftl-runner",
    embed = [":ftl-runner_lib"],
    visibility = ["//visibility:public"],
)
