load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-schema_lib",
    srcs = ["main.go"],
    importpath = "github.com/block/ftl/cmd/ftl-schema",
    visibility = ["//visibility:private"],
    deps = [
        "//:ftl",
        "//backend/schemaservice",
        "//internal/log",
        "//internal/observability",
        "//internal/prodinit",
        "//internal/rpc",
        "//internal/timelineclient",
        "@com_github_alecthomas_kong//:kong",
    ],
)

go_binary(
    name = "ftl-schema",
    embed = [":ftl-schema_lib"],
    visibility = ["//visibility:public"],
)
