load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ftl-timeline_lib",
    srcs = ["main.go"],
    importpath = "github.com/block/ftl/cmd/ftl-timeline",
    visibility = ["//visibility:private"],
    deps = [
        "//:ftl",
        "//backend/timeline",
        "//internal/log",
        "//internal/observability",
        "//internal/prodinit",
        "//internal/rpc",
        "@com_github_alecthomas_kong//:kong",
    ],
)

go_binary(
    name = "ftl-timeline",
    embed = [":ftl-timeline_lib"],
    visibility = ["//visibility:public"],
)
