load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "ftl_lib",
    srcs = [
        "cmd_bench.go",
        "cmd_build.go",
        "cmd_call.go",
        "cmd_changeset.go",
        "cmd_changeset_list.go",
        "cmd_changeset_rollback.go",
        "cmd_config.go",
        "cmd_deploy.go",
        "cmd_dev.go",
        "cmd_download.go",
        "cmd_goose.go",
        "cmd_init.go",
        "cmd_interactive.go",
        "cmd_kill.go",
        "cmd_logs.go",
        "cmd_logs_set_level.go",
        "cmd_lsp.go",
        "cmd_mcp.go",
        "cmd_module.go",
        "cmd_mysql.go",
        "cmd_ping.go",
        "cmd_postgres.go",
        "cmd_profile.go",
        "cmd_ps.go",
        "cmd_pubsub.go",
        "cmd_replay.go",
        "cmd_schema.go",
        "cmd_schema_diff.go",
        "cmd_schema_ebnf.go",
        "cmd_schema_example.go",
        "cmd_schema_generate.go",
        "cmd_schema_get.go",
        "cmd_secret.go",
        "cmd_serve.go",
        "cmd_sql_migration_new.go",
        "cmd_sql_new.go",
        "cmd_update.go",
        "inner_cmd.go",
        "main.go",
    ],
    embedsrcs = [
        "dependency-versions.txt",
        "goose_instructions.txt",
    ],
    importpath = "github.com/block/ftl/cmd/ftl",
    visibility = ["//visibility:private"],
    deps = [
        "//:ftl",
        "//backend/admin",
        "//backend/console",
        "//backend/controller",
        "//backend/controller/artefacts",
        "//backend/cron",
        "//backend/ingress",
        "//backend/lease",
        "//backend/protos/xyz/block/ftl/admin/v1:admin",
        "//backend/protos/xyz/block/ftl/admin/v1/adminpbconnect",
        "//backend/protos/xyz/block/ftl/buildengine/v1:buildengine",
        "//backend/protos/xyz/block/ftl/buildengine/v1/buildenginepbconnect",
        "//backend/protos/xyz/block/ftl/lease/v1/leasepbconnect",
        "//backend/protos/xyz/block/ftl/timeline/v1:timeline",
        "//backend/protos/xyz/block/ftl/timeline/v1/timelinepbconnect",
        "//backend/protos/xyz/block/ftl/v1/ftlv1connect",
        "//backend/provisioner",
        "//backend/provisioner/scaling/localscaling",
        "//backend/schemaservice",
        "//backend/timeline",
        "//common/reflection",
        "//common/schema",
        "//common/slices",
        "//frontend/console",
        "//internal",
        "//internal/bind",
        "//internal/buildengine",
        "//internal/buildengine/languageplugin",
        "//internal/channels",
        "//internal/config",
        "//internal/configuration",
        "//internal/configuration/manager",
        "//internal/configuration/providers",
        "//internal/dev",
        "//internal/download",
        "//internal/exec",
        "//internal/flock",
        "//internal/key",
        "//internal/log",
        "//internal/lsp",
        "//internal/mcp",
        "//internal/moduleconfig",
        "//internal/observability",
        "//internal/prodinit",
        "//internal/profiles",
        "//internal/projectconfig",
        "//internal/projectinit",
        "//internal/routing",
        "//internal/rpc",
        "//internal/rpc/headers",
        "//internal/schema/schemaeventsource",
        "//internal/terminal",
        "//internal/timelineclient",
        "//internal/watch",
        "@com_connectrpc_connect//:connect",
        "@com_github_alecthomas_atomic//:atomic",
        "@com_github_alecthomas_chroma_v2//quick",
        "@com_github_alecthomas_errors//:errors",
        "@com_github_alecthomas_kong//:kong",
        "@com_github_alecthomas_kong_toml//:kong-toml",
        "@com_github_alecthomas_types//either",
        "@com_github_alecthomas_types//must",
        "@com_github_alecthomas_types//optional",
        "@com_github_amacneil_dbmate_v2//pkg/dbutil",
        "@com_github_block_scaffolder//:scaffolder",
        "@com_github_block_scaffolder//extensions/javascript",
        "@com_github_hexops_gotextdiff//:gotextdiff",
        "@com_github_hexops_gotextdiff//myers",
        "@com_github_hexops_gotextdiff//span",
        "@com_github_jotaen_kong_completion//:kong-completion",
        "@com_github_jpillora_backoff//:backoff",
        "@com_github_mattn_go_isatty//:go-isatty",
        "@com_github_radovskyb_watcher//:watcher",
        "@com_github_titanous_json5//:json5",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_exp//maps",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_term//:term",
    ],
)

go_binary(
    name = "ftl",
    embed = [":ftl_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "ftl_test",
    srcs = ["cmd_mcp_test.go"],
    embed = [":ftl_lib"],
    deps = [
        "//internal/log",
        "//internal/projectconfig",
        "@com_github_alecthomas_assert_v2//:assert",
        "@com_github_alecthomas_kong//:kong",
    ],
)
